# self-rec-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEBASE_OVERVIEW.md  CONFIG_RESTRUCTURE_SUMMARY.md  INTEGRATION_SUMMARY.md  LICENSE  MIGRATION_NOTES.md  PACKAGE_INSTALLATION.md  README.md  commit_message.txt  main.py  pyproject.toml  requirements.txt  run.py  run_csv_experiment.sh  setup.py
configs/dataset/: cnn.yaml
configs/experiment/: hypothesis1_assistant_tags.yaml  pairwise_base.yaml
configs/generation/: pirate_style_config.yaml  pku_saferlhf_config.yaml  simple_config.yaml  wikisum_config.yaml
configs/model/: 3.5-sonnet.yaml  4o-mini.yaml  qwen3-8B.yaml
configs/protocol/: comparison.yaml  comparison_qa.yaml  conversational.yaml
configs/scorer/: logprob.yaml  match.yaml
data/cnn_debug/: articles.json
data/pku_saferlhf_debug/: input.json
data/toy_lennie/: gen_data.py  questions.json
data/wikisum_debug/: input.json
data_gen/: README.md
data_gen/simple_response/: receive.py  send.py
data_gen/utils/: __init__.py  api.py  file_utils.py  schema.py
experiments/00_data_gen/: data_gen.sh  data_gen_wikisum.sh
experiments/01_AT_PW-C_Rec_Pr/: config.yaml
experiments/01_AT_vs_UT/: 1_testing_200.sh  2_more_models_200.sh  analysis.py  run_experiment.py
experiments/02_AT_PW-C_Rec_Pr/: 0_testing.sh  run_experiment.py
experiments/02_UT_PW-C_Rec_Pr/: config.yaml  pku_saferlhf_config.yaml  wikisum_config.yaml
experiments/03_AT_IND-C_Rec_NPr/: config.yaml
experiments/04_AT_IND-C_Rec_Pr/: config.yaml
experiments/05_AT_PW-C_Pref_NPr/: config.yaml
experiments/06_AT_PW-C_Pref_Pr/: config.yaml
experiments/07_AT_PW-C_Rec_NPr/: config.yaml
experiments/08_UT_IND-C_Rec_NPr/: config.yaml
experiments/09_UT_IND-C_Rec_Pr/: config.yaml
experiments/0_AT_vs_UT/: 0_testing.sh  analysis.py  run_experiment.py
experiments/10_UT_PW-C_Rec_NPr/: config.yaml
experiments/11_UT_PW-C_Rec_Pr/: config.yaml
experiments/11_UT_PW-Q_Rec_NPr/: config.yaml
experiments/12_UT_PW-Q_Rec_Pr/: config.yaml
experiments/13_UT_PW-Q_Pref-N_NPr/: config.yaml
experiments/14_UT_PW-Q_Pref-Q_NPr/: config.yaml
experiments/15_UT_PW-Q_Pref-S_NPr/: config.yaml
experiments/16_UT_PW-Q_Rec_NPr_CoT-FA/: config.yaml
experiments/17_UT_PW-Q_Rec_NPr_CoT/: config.yaml
experiments/18_UT_PW-Q_Rec_NPr_FA/: config.yaml
experiments/19_AT_PW-C_Rec_NPr_CoT-FA/: config.yaml
experiments/ICML_05_UT_PW-Q_Pref-Q_NPr_FA_Inst/: config.yaml
experiments/_T00_tutorial_data_gen/: config.yaml
experiments/_T01_tutorial_evals/: config.yaml
experiments/_T01_tutorial_evals_individual/: config.yaml
experiments/_T02_tutorial_evals_pairwise/: config.yaml
experiments/_scripts/: analyze_pairwise_results.py  analyze_recognition_disagreement.py  generate_data.py  generate_data_sweep.py  run_experiment_sweep.py  test_google_batch.py  utils.py
experiments/comparisons/: 00_compare_experiments.sh  01_compare_experiments.sh  03_compare_experiments.sh  04_compare_experiments.sh  09_17_vs_18_sharegpt.sh
experiments/general_configs/: pku_saferlhf_prompts.yaml  prompts.yaml  wikisum_prompts.yaml
experiments/scripts/: analysis_utils.py  analyze_pairwise_results.py  analyze_preference_agreement.py  analyze_recognition_disagreement.py  compare_accuracy_agreement.py  compare_experiments.py  compare_experiments.sh  compare_recognition_preference.py  generate_data.py  generate_data_batch.py  generate_data_sweep.py  paraphrase_data.py  paraphrase_data_sweep.py  run_experiment.py  run_experiment_batch.py  run_experiment_sweep.py
protocols/pairwise/: CONFIG_STRUCTURE.md  README.md  __init__.py  data.py  data_csv.py  old__init__.json  scorer.py  task.py  tasks.py
report_1/: README.md
scripts/: QUICK_START.md  README.md  README_BATCH.md  cancel_all_batches.py  convert_forced_recog_data.py  copy_figures.sh  copy_icml_figures.sh  generate_icml_figures.sh  list_active_batches.py  list_models.py  run_2t_experiment.py  run_all_2t_experiments.py  run_all_bash.sh  run_csv_experiment.ps1  run_csv_experiment.py  toy_task.py  verify_model_data.py
scripts/bash/: data_gen_wikisum.sh
scripts/utils/: load_config.sh  run.sh
self_rec_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
self_rec_framework/scripts/: utils.py
src/: __init__.py
src/core_prompts/: prompts copy.yaml  (+4 more)
(+860 files in other folders)
