[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-rec-framework"
version = "0.1.0"
description = "Self-recognition framework for LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "datasets>=4.2.0",
    "fireworks-ai>=0.19.19",
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.5",
    "inspect-ai>=0.3.134",
    "matplotlib>=3.10.7",
    "numpy>=1.26.0",
    "openai>=2.8.0",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.0",
    "together>=1.5.26",
]

[tool.setuptools]
# Package structure: self_rec_framework/src/...
# Allows imports like: from self_rec_framework.src.helpers.model_names import ...
packages = {find = {where = ["."], include = ["self_rec_framework*"], exclude = ["experiments*", "scripts*", "data*", "*.egg-info", "build", "dist", "tests*"]}}

[project.optional-dependencies]
dev = [
    "ruff>=0.9.10",
]
